# synTOPia-data-gen

./: .gitignore  LICENSE  README.md  claude_desktop_config.json  example_xml_file.yaml  pyproject.toml  test_mcp_server.py
examples/: rules.yaml
synthetic_data/: synthetic_data.csv
syntopia/: __init__.py  cli.py  mcp_server.py  rules.py
syntopia/data/topmed/raw/: phs001402.v3.p1.xml
syntopia/data/topmed/rules/: basic.yaml
syntopia/data/topmed/schemas/: phs001040.v6.pht005682.v3.p1.TOPMed_WGS_WGHS_Subject_Phenotypes.var_report.yaml  phs001402.v3.p1.yaml  phs001402.v3.pht008239.v1.p1.TOPMed_WGS_Mayo_VTE_Subject_Phenotypes.var_report.yaml  test_small.yaml  test_ukb_like.yaml
syntopia/data/topmed/synthetic/: phs001040.v6.pht005682.v3.p1.TOPMed_WGS_WGHS_Subject_Phenotypes.var_report.csv  phs001402.v3.p1_basic.csv  phs001402.v3.pht008239.v1.p1.TOPMed_WGS_Mayo_VTE_Subject_Phenotypes.var_report.csv  test_small_correlation_matrix.csv  test_ukb_like_correlation_matrix.csv
syntopia/parsing/: parsers.py  schema.py
syntopia/synth/: base_synth.py  epigraph_synth.py  evaluate.py  priors.py
syntopia/utils/: paths.py
