[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syntopia"
version = "0.0.1"
description = "A CLI toolkit for synthetic data generation based on TOPMed data dictionaries"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "click>=8.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "lxml>=5.2",
]

[project.scripts]
syntopia = "syntopia.cli:cli" 